# DAISY

./: LICENSE  README.md  daisy.toml  pyproject.toml
bench/: bench.py
ci/: ci.md  run_ci.py
daisy_lang.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: production_language_plan.md  rust-interop.md  security_policy.md  stdlib.md  threat_model.md
examples/: borrow_fail.dsy  concurrency.dsy  english_hello.dsy  korean_hello.dsy  tensor_matmul.dsy
pkg/: __init__.py
runtime/: rt.c  rt.h
scripts/: install.ps1  install.sh
spec/: daisy_subset.md  decisions.md  korean_patterns.md  korean_syntax.md
src/: main.dsy  mathlib.dsy  privlib.dsy  privlib_ko.dsy
stdlib/: concurrency.dsy  errors.dsy  option.dsy  result.dsy  stdlib_collections.dsy  stdlib_core.dsy  stdlib_fs.dsy  stdlib_io.dsy  stdlib_log.dsy  stdlib_net.dsy  stdlib_runtime.dsy  stdlib_serialize.dsy  stdlib_strings.dsy  stdlib_strings_ext.dsy
tests/: arithmetic.dsy  collections_runtime.dsy  comparison.dsy  concurrency_runtime.dsy  deps_import.dsy  enum_basic.dsy  error_model.dsy  fs_runtime.dsy  fuzz_compile.py  fuzz_irgen.py  fuzz_lexer.py  generic_fn_basic.dsy  generics_basic.dsy  if_else.dsy  korean_module_alias.dsy  korean_private.dsy  korean_struct_enum.dsy  logical_ops.dsy  match_basic.dsy  match_enum_bind.dsy  match_guard.dsy  match_nested_enum.dsy  match_struct.dsy  module_import.dsy  module_private.dsy  module_use_alias.dsy  net_runtime.dsy  result_option_utils.dsy  run_tests.py  runtime_stats.dsy  stdlib_core_runtime.dsy  strings_ext_runtime.dsy  strings_runtime.dsy  struct_basic.dsy  (+11 more)
(+80 files in other folders)
